# PHYSMOL

./: .gitignore  AI_evaluation.md  CHANGELOG.md  CHANGES.md  CMakeLists.txt  LICENSE  Makefile  PHYSMOL.md  README.md  setup.py
checkpoints/broca/: progress.json  progress.jsonl
checkpoints/broca/model/: grammar.json  stats.json  vocab.json
checkpoints/broca/model/model/: grammar.json  stats.json  vocab.json
config/: default.yaml
docs/: MODELSCOPE_TRAINING.md
scripts/: cloud_train.sh  modelscope_abstract_training.sh
src/bindings/: lnn_py.cpp  snn_py.cpp  vsa_py.cpp
src/core/: causal.c  causal.h  lnn.c  lnn.h  memory.c  memory.h  snn.c  snn.h  vsa.c  vsa.h
src/hip/: lnn_hip.h  lnn_hip.hip
src/python/physmol/: __init__.py  abstract_train.py  abstract_training.py  agent_bridge.py  agent_cli.py  alignment.py  api_server.py  continuous_learning.py  dialogue_trainer.py  evolution.py  knowledge_acquisition.py  lgnn.py  lgnn_train.py  lnn.py  long_term_memory.py  mcp_server.py  motivation.py  perception.py  progress.py  progress_server.py  sim_env.py  snn.py  train.py  training_data.py  transfer.py  unified_train.py  vsa.py  vsa_concepts.py  vsa_store.py  world_model.py
src/python/physmol/language/: __init__.py  abstract_reasoning.py  abstract_tasks.py  broca.py  cognitive.py  conversation.py  enhanced_encoder.py  physics_causal.py  reasoning.py  responder.py  semantic_parser.py  text_encoder.py  theory_of_mind.py  vsa_generator.py
tests/: test_cognitive_extensions.py  test_language.py  test_lgnn.py  test_lnn.py  test_snn.c  test_snn.py  test_vsa.c  test_vsa.py
